fixed readability issue of project title on image

--- a/code/style.css
+++ b/code/style.css
@@ -178,6 +178,8 @@ section {
 .project-image {
     margin-top: 16px;
     width: 100%;
+    filter: brightness(60%);
+    z-index: 2;
 }
 
 .on-top-project-image {
@@ -194,11 +196,7 @@ section {
     font-size: 28px;
     letter-spacing: 0.01em;
     color: #FFFFFF;
-}
-
-.on-top-project-image p {
-    background-color: #0e3f4f9b;
-    padding: 0 8px;
+    z-index: 1;
 }
 
 /* PROJECTS --- TEXT */
